// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component test CountrySelector component snapshot 1`] = `
<DocumentFragment>
  <select
    class="form-control  "
  >
    <option>
      Choose
    </option>
  </select>
</DocumentFragment>
`;

exports[`Select component test Snapshot test for Select component 1`] = `
<select
  className="form-control  "
>
  <option>
    Choose
  </option>
</select>
`;
